kubernetes/17-quassel-web/quassel-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-irc-server
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - web.irc.apps.chibifire.com
    secretName: web-irc-tls
  rules:
  - host: web.irc.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: quassel-web-service
          servicePort: 443
